--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>demo-blog</name>
+    <name>demo-blog-api</name>
     <description>Demo project for Spring Boot</description>
 
     <parent>
